Add items to playlist

--- a/src/MovieList.css
+++ b/src/MovieList.css
@@ -3,34 +3,58 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	list-style: none;
-	font-size: x-large;
 }
 
 .movie-list-container li {
-	height: 150px;
-	width: 150px;
+	height: 175px;
+	width: 175px;
 	background-color: lightblue;
-	color: darkslategrey;
-	font-weight: 500;
-	margin: 10px;
-	padding: 25px;
+	margin: 5px;
+	padding: 15px;
 	border-radius: 10px;
-	overflow: auto;
-	text-overflow: ellipsis;
 
+	overflow: hidden;
+	text-overflow: ellipsis;
 	display: flex;
-    	flex-direction: column;
-    	justify-content: center;
+    flex-direction: column;
+	text-align: initial;
+}
+
+.movie-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.movie-title {
+	color: darkslategrey;
+	font-weight: 600;
+	font-size: 14px;
+	margin: 0px;
+}
+
+.movie-year {
+	color: rgb(72, 61, 139);
+	font-size: 12px;
+	font-weight: 500;
+	margin: 5px 0px;
+}
+
+.playlist-button {
+	padding: 6px;
+	border-radius: 5px;
+	color: darkslategray;
+	font-weight: 600;
 }
 
 @keyframes fade-in {
-	from {opacity: 0;}
-	to {opacity: 1;}
+	from { opacity: 0; }
+	to { opacity: 1; }
 }
 
 @media (prefers-reduced-motion: no-preference) {
   li {
 	animation-name: fade-in;
-	animation-duration: 2s;
+	animation-duration: 1s;
   }
 }
