Make it work on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,15 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search-bar {
+  background-color: lightblue;
+  padding-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin: 0px;
+  padding-top: 10px;
+  font-size: x-large;
 }
 
 input {
@@ -22,4 +18,5 @@ input {
   padding: 5px;
   border-radius: 5px;
   margin: 10px;
+  min-width: 35px;
 }
