--- a/src/MovieList.css
+++ b/src/MovieList.css
@@ -3,11 +3,12 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	list-style: none;
+	padding-inline-start: 0px;
 }
 
 .movie-list-container li {
-	height: 175px;
-	width: 175px;
+	height: 125px;
+	width: 125px;
 	background-color: lightblue;
 	margin: 5px;
 	padding: 15px;
@@ -29,6 +30,9 @@
 .movie-title {
 	color: darkslategrey;
 	font-weight: 600;
+	max-height: 70px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 	font-size: 14px;
 	margin: 0px;
 }
