--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
 .App {
   text-align: center;
+  height: 100%;
+}
+
+html, body {
+  min-height: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  height: 100%;
 }
 
 .search-bar {
   background-color: lightblue;
+  min-height: 125px;
   padding-bottom: 10px;
 }
 
@@ -19,4 +31,13 @@ input {
   border-radius: 5px;
   margin: 10px;
   min-width: 35px;
+}
+
+.page-toggle {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    padding: 20px;
+    font-size: large;
+    border-radius: 5px;
 }
